   * Fixed attempt to access freed memory in [request_campaign_list] handler.
 * Campaigns:
   * Under the Burning Suns:
     * Fixed bug #22800: Cloaked Figure appears in strange location.
 * Language and i18n:
   * Updated translations: Lithuanian
 * Miscellaneous and bug fixes:
   * Bug fix: another instance of "overlapping messages", this time with
     the planning mode activiation hotkey

Version 1.11.17:
 * Add-ons server:
   * Major internal refactoring done.
 * Campaigns
   * Heir to the Throne:
     * Fixed missing message in 'The Siege of Elensefar'.
   * Sceptre of Fire:
     * Balancing changes for 'The Dragon'.
   * The Hammer of Thursagan:
     * Set Masked Dwarvish Lord range attack same as for Dwarvish Lord
   * Fix sighted events firing too early in several scenarios. Fixes bug #22466
 * Graphics
   * Disabled "alpha thresholding" in the bilinear interpolation algorithm
     used for all sprites and images. (This was introduced as a workaround
     for an old bug.)
 * Language and i18n:
   * Updated translations: Czech, German, Lithuanian, Slovak
 * User interface:
   * Fixed bug #22046: An assertion failure with empty labels in a listbox
   * In the dialog layout code, fixed the button padding (bug #22379)
   * Removed the "Replay viewer" text label from the replay controller theme,
     because it caused problems for translators and was unnecessary
   * Made the gamestate inspector split excessively long entries (bug #22237).
   * WML array elements are displayed with their subscripts in the gamestate
     inspector.
 * Miscellaneous and bug fixes:
   * Reverted changes to Mushroom Grove terrain stats from version 1.11.16 (see
     bugs #21971, #22336).
   * Fix bug #22307: random map generation produces oss in multiplayer
     campaigns.
   * Made the error messages sent to stderr when the core data dir is
     incorrectly set *even more* helpful by correctly advising the use of
     --data-dir, not --config-dir