@@ -9,6 +9,7 @@ Version 1.11.17+dev:
  * Miscellaneous and bug fixes:
    * Bug fix: another instance of "overlapping messages", this time with
      the planning mode activiation hotkey
+   * Lurkers Micro AI: fix bug in wander terrain selection
 
 Version 1.11.17:
  * Add-ons server:
